Finished landingPage(sorta)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body class="body bg-white dark:bg-slate-900">
-    <div class="Graident bg-gradient-to-r from-purple-500 to-pink-500 h-auto w-auto">
+    <div class="Graident bg-gradient-to-r from-purple-500 to-pink-500 h-auto w-auto pb-24">
     <nav>
         <div class="nav p-4 flex"> 
             <p class="Logo Text px-10 text-black text-lg dark:text-white">CursorBridge</p>
@@ -27,9 +27,30 @@
     <p class="LogoText text-black dark:text-white text-xl text-center">A place where you can find all the UI you need in one place.</p>
     </div>
 </div>
-    <div class="container1 flex flex-col md:flex-row justify-between py-52">
-        <img src="./Images/Folder.svg" class="Image justify-start md:translate-x-36">
-        <p class="Text text-black text-center md:text-right md:pr-16 dark:text-white text-xl">A place where you can find all of the UI components you need in one singe place.</p>
+    <div class="container1 flex flex-col md:flex-row justify-between py-52 align-middle">
+        <img src="./Images/Folder.svg" class="Image justify-start md:translate-x-36 md:scale-150">
+        <p class="Text text-black text-center md:text-left md:mr-64 md:w-80  dark:text-white text-xl">A place where you can find all of the UI components you need in one place.</p>
     </div>
+    <div class="container1 flex flex-col md:flex-row justify-between align-middle">
+        <p class="Text text-black text-center md:text-left md:ml-64 md:w-80  dark:text-white text-xl">A place where you can find all of the UI components you need in one place.</p>
+        <img src="./Images/Folder.svg" class="Image justify-end md:-translate-x-64 md:scale-150">
+    </div>
+    <div class="container1 flex flex-col md:flex-row justify-between py-52 align-middle">
+        <img src="./Images/Folder.svg" class="Image justify-start md:translate-x-36 md:scale-150">
+        <p class="Text text-black text-center md:text-left md:mr-64 md:w-80  dark:text-white text-xl">A place where you can find all of the UI components you need in one place.</p>
+    </div>
+    <div class="container1 flex flex-col md:flex-row justify-between align-middle">
+        <p class="Text text-black text-center md:text-left md:ml-64 md:w-80  dark:text-white text-xl">A place where you can find all of the UI components you need in one place.</p>
+        <img src="./Images/Folder.svg" class="Image justify-end md:-translate-x-64 md:scale-150">
+    </div>
+    <div class="container1 flex flex-col md:flex-row justify-between py-52 align-middle">
+        <img src="./Images/Folder.svg" class="Image justify-start md:translate-x-36 md:scale-150">
+        <p class="Text text-black text-center md:text-left md:mr-64 md:w-80  dark:text-white text-xl">A place where you can find all of the UI components you need in one place.</p>
+    </div>
+    <div class="container1 flex flex-col md:flex-row justify-between align-middle">
+        <p class="Text text-black text-center md:text-left md:ml-64 md:w-80  dark:text-white text-xl">A place where you can find all of the UI components you need in one place.</p>
+        <img src="./Images/Folder.svg" class="Image justify-end md:-translate-x-64 md:scale-150">
+    </div>
+
 </body>
 </html>
