completed the Landing Page

--- a/index.html
+++ b/index.html
@@ -28,29 +28,23 @@
     </div>
 </div>
     <div class="container1 flex flex-col md:flex-row justify-between py-52 align-middle">
-        <img src="./Images/Folder.svg" class="Image justify-start md:translate-x-36 md:scale-150">
+        <img src="./Images/Folder.svg" class="Image justify-start md:translate-x-72 md:scale-150">
         <p class="Text text-black text-center md:text-left md:mr-64 md:w-80  dark:text-white text-xl">A place where you can find all of the UI components you need in one place.</p>
     </div>
     <div class="container1 flex flex-col md:flex-row justify-between align-middle">
-        <p class="Text text-black text-center md:text-left md:ml-64 md:w-80  dark:text-white text-xl">A place where you can find all of the UI components you need in one place.</p>
-        <img src="./Images/Folder.svg" class="Image justify-end md:-translate-x-64 md:scale-150">
+        <p class="Text text-black text-center md:text-left md:ml-64 md:w-80  dark:text-white text-xl"> Infinite UI that never stops... No matter what. With thousands of UI components, you will never run out of choices for your website!</p>
+        <img src="./Images/Inf.svg" class="Image justify-end md:-translate-x-64 md:-translate-y-6 md:scale-150">
     </div>
     <div class="container1 flex flex-col md:flex-row justify-between py-52 align-middle">
-        <img src="./Images/Folder.svg" class="Image justify-start md:translate-x-36 md:scale-150">
-        <p class="Text text-black text-center md:text-left md:mr-64 md:w-80  dark:text-white text-xl">A place where you can find all of the UI components you need in one place.</p>
+        <img src="./Images/Cursor.svg" class="Image justify-start md:translate-x-72 md:scale-150">
+        <p class="Text text-black text-center md:text-left md:mr-64 md:w-80  dark:text-white text-xl"> Exceptional UI at the tip of your cursor. This is possible because the UI is made from talented professionals who are passionate about helping other people with their work of art.</p>
     </div>
     <div class="container1 flex flex-col md:flex-row justify-between align-middle">
-        <p class="Text text-black text-center md:text-left md:ml-64 md:w-80  dark:text-white text-xl">A place where you can find all of the UI components you need in one place.</p>
-        <img src="./Images/Folder.svg" class="Image justify-end md:-translate-x-64 md:scale-150">
+        <p class="Text text-black text-center md:text-left md:ml-64 md:w-80  dark:text-white text-xl">With copy paste code, you will never have to change anything. Just add some small changes and you will be good to go!</p>
+        <img src="./Images/Copypaste.svg" class="Image justify-end md:-translate-x-64 md:scale-150">
     </div>
-    <div class="container1 flex flex-col md:flex-row justify-between py-52 align-middle">
-        <img src="./Images/Folder.svg" class="Image justify-start md:translate-x-36 md:scale-150">
-        <p class="Text text-black text-center md:text-left md:mr-64 md:w-80  dark:text-white text-xl">A place where you can find all of the UI components you need in one place.</p>
-    </div>
-    <div class="container1 flex flex-col md:flex-row justify-between align-middle">
-        <p class="Text text-black text-center md:text-left md:ml-64 md:w-80  dark:text-white text-xl">A place where you can find all of the UI components you need in one place.</p>
-        <img src="./Images/Folder.svg" class="Image justify-end md:-translate-x-64 md:scale-150">
-    </div>
-
+    <div class=" py-48 flex justify-center">
+    <a href="./Components/Discover.html"><Button class="w-60 h-20 rounded-md bg-blue-700 text-white">Start discovering today!</Button></a>
+</div>
 </body>
 </html>
