added a working navbar to the discover page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <img src="./Images/Copypaste.svg" class="Image justify-end md:-translate-x-64 md:scale-150">
     </div>
     <div class=" py-48 flex justify-center">
-    <a href="./Components/Discover.html"><Button class="w-60 h-20 rounded-md bg-blue-700 text-white">Start discovering today!</Button></a>
+    <a href="./Components/Discover.html"><Button class="w-60 h-20 rounded-md text-lg bg-blue-700 text-white">Start discovering today!</Button></a>
 </div>
 </body>
 </html>
